--- a/debian/control
+++ b/debian/control
@@ -14,7 +14,7 @@ Build-Depends: debhelper (>= 9),
                qt5-default,
                qtbase5-private-dev (>= 5.0.2~),
                libmng-dev,
-               libtiff5-dev | libtiff4-dev
+               libtiff-dev
 Standards-Version: 3.9.4
 Homepage: http://qt-project.org/
 
