--- a/debian/control
+++ b/debian/control
@@ -17,6 +17,8 @@ Build-Depends: debhelper (>= 9),
                libtiff-dev
 Standards-Version: 3.9.4
 Homepage: http://qt-project.org/
+Vcs-Git: git://anonscm.debian.org/pkg-kde/qt/qtimageformats.git
+Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/qt/qtimageformats.git;a=summary
 
 Package: libqt5imageformats5
 Architecture: any
