--- a/debian/rules
+++ b/debian/rules
@@ -8,7 +8,7 @@ export CXXFLAGS := $(shell dpkg-buildflags --get CXXFLAGS) $(shell dpkg-buildfla
 export LDFLAGS := $(shell dpkg-buildflags --get LDFLAGS) -Wl,--as-needed
 
 %:
-	dh $@ --list-missing --parallel
+	dh $@ --parallel
 
 override_dh_auto_configure:
 	qmake
