--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Uploaders: Fathi Boudra <fabo@debian.org>,
 Build-Depends: debhelper (>= 9),
                dpkg-dev (>= 1.16.1),
                pkg-kde-tools,
-               qtbase5-private-dev (>= 5.1.1+dfsg~),
+               qtbase5-private-dev (>= 5.2.0~),
                libmng-dev,
                libtiff-dev
 Standards-Version: 3.9.4
