--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Build-Depends: debhelper (>= 9),
                dpkg-dev (>= 1.16.1),
                pkg-kde-tools,
                qtbase5-private-dev (>= 5.2.1+dfsg~),
-               libmng-dev,
+               libmng-dev, libjasper-dev, libwebp-dev,
                libtiff-dev,
                xauth,
                xvfb
