--- a/debian/control
+++ b/debian/control
@@ -10,10 +10,12 @@ Uploaders: Fathi Boudra <fabo@debian.org>,
            Timo Jyrinki <timo@debian.org>
 Build-Depends: debhelper (>= 9),
                dpkg-dev (>= 1.16.1),
+               libjasper-dev,
+               libmng-dev,
+               libtiff-dev,
+               libwebp-dev,
                pkg-kde-tools,
                qtbase5-private-dev (>= 5.2.1+dfsg~),
-               libmng-dev, libjasper-dev, libwebp-dev,
-               libtiff-dev,
                xauth,
                xvfb
 Standards-Version: 3.9.5
