Build depend upon libwebp >= 0.4.0-4.1~.

--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Build-Depends: debhelper (>= 9),
                libjasper-dev,
                libmng-dev,
                libtiff-dev,
-               libwebp-dev,
+               libwebp-dev (>= 0.4.0-4.1~),
                pkg-kde-tools,
                qtbase5-private-dev (>= 5.3.0+dfsg~),
                xauth,
