--- a/debian/control
+++ b/debian/control
@@ -14,7 +14,7 @@ Build-Depends: debhelper (>= 9),
                libtiff-dev,
                libwebp-dev (>= 0.4.0-4.1~),
                pkg-kde-tools,
-               qtbase5-private-dev (>= 5.6.0~beta+dfsg-1~),
+               qtbase5-dev (>= 5.6.0~beta+dfsg~),
                xauth,
                xvfb
 Standards-Version: 3.9.6
