--- a/debian/control
+++ b/debian/control
@@ -14,9 +14,7 @@ Build-Depends: debhelper (>= 9),
                libtiff-dev,
                libwebp-dev (>= 0.4.0-4.1~),
                pkg-kde-tools,
-               qtbase5-dev (>= 5.6.0~beta+dfsg~),
-               xauth,
-               xvfb
+               qtbase5-dev (>= 5.6.0~beta+dfsg-3~)
 Standards-Version: 3.9.6
 Homepage: http://qt-project.org/
 Vcs-Git: git://anonscm.debian.org/pkg-kde/qt/qtimageformats.git
