--- a/debian/control
+++ b/debian/control
@@ -15,8 +15,8 @@ Build-Depends: debhelper (>= 9),
                qtbase5-dev (>= 5.6.0+dfsg-1~)
 Standards-Version: 3.9.6
 Homepage: http://qt-project.org/
-Vcs-Git: git://anonscm.debian.org/pkg-kde/qt/qtimageformats.git
-Vcs-Browser: http://anonscm.debian.org/cgit/pkg-kde/qt/qtimageformats.git
+Vcs-Git: https://anonscm.debian.org/git/pkg-kde/qt/qtimageformats.git
+Vcs-Browser: https://anonscm.debian.org/cgit/pkg-kde/qt/qtimageformats.git
 
 Package: qt5-image-formats-plugins
 Architecture: any
