--- a/debian/control
+++ b/debian/control
@@ -16,8 +16,8 @@ Build-Depends: debhelper (>= 10),
                qtbase5-dev (>= 5.10.1+dfsg~)
 Standards-Version: 4.1.3
 Homepage: http://qt-project.org/
-Vcs-Git: https://anonscm.debian.org/git/pkg-kde/qt/qtimageformats.git
-Vcs-Browser: https://anonscm.debian.org/cgit/pkg-kde/qt/qtimageformats.git
+Vcs-Git: https://salsa.debian.org/qt-kde-team/qt/qtimageformats.git
+Vcs-Browser: https://salsa.debian.org/qt-kde-team/qt/qtimageformats
 
 Package: qt5-image-formats-plugins
 Architecture: any
